{{$NEXT}}

- Added a Test::Specio module to provide helpers for testing Specio libraries.


0.27     2016-10-01

- Cloning a type with coercions defined on it would cause an exception.

- Creating a subtype of a special type created by *_isa_type, *_can_type, or
  *_does_type, or enum would die when trying to inline type constraint.

- Removed the never-documented Any type.

- Added documentation for each type in Specio::Library::Builtins.


0.26     2016-09-24

- Require Role::Tiny 1.003003. This should fix the test failures some
  CPANTesters reported with this error:

    Can't resolve method "???" overloading "&{}" in package
    "Specio::Constraint::Simple" at Specio::Constraint::Simple->new line 35.


0.25     2016-09-04

- Calling {any,object}_{isa,does}_type repeatedly in a package with the same
  class or role name would die. These subs are now special-cased to simply
  return an existing type for the given name when they receive a single
  argument (the name of the class or role). This could come up if you had two
  attributes both of which required an object of the same type.


0.24     2016-06-20

- Fix a bizarre failure on Perl before 5.14. AFAICT this was a test problem,
  not a library problem.


0.23     2016-06-20

- Added intersection types.


0.22     2016-06-18

- Require version.pm 0.83. I know 0.77 doesn't work but I'm not sure exactly
  which version fixed the problem, since I cannot install older
  versions. Reported by Slaven Rezic. RT #115418.


0.21     2016-06-18

- Don't load Sub::Quote, but use it if it's already loaded. Since Moo uses it,
  this should make Specio constraints just work with Moo.


0.20     2016-06-18

- Removed test dependency on namespace::autoclean.


0.19     2016-06-17

- Removed dependency on Devel::PartialDump by making a copy of just the bits
  we need. Gross but effective.


0.18     2016-06-15

- Added union types.

- If a subtype's parent could be inlined and the subtype itself did not